# violet

./: .gitignore  LICENSE  README.md  flocking.py  pyproject.toml  test.py
.github/workflows/: api-docs.yml
.github/worksflows/: api-docs.yml
assignment 0/: flocking.py
assignment_0/: flocking.py
examples/: README.md  data-analysis.py  lot-o-configs.py  minimal.py  proximity-agent.py  proximity-player.py  proximity-player.toml  proximity.py  schema.py  spinning.py  toml.py
examples/state_machine/: config.py  finite_state_machine.py
templates/: module.html.jinja2
vi/: __init__.py  _static.py  agent.py  config.py  metrics.py  obstacle.py  proximity.py  replay.py  simulation.py  util.py  window.py
