[project]
name = "violet-simulator"
version = "0.2.5"
description = "A smol simulator framework built on top of PyGame"
requires-python = ">=3.9"
readme = "README.md"
license = "MIT"
dependencies = [
    "pygame~=2.6",
    "polars~=1.2",
    "pyserde[toml]~=0.24",
    "typing-extensions~=4.12",
]

[[project.authors]]
name = "Storm Timmermans"
email = "stormtimmermans@icloud.com"

[project.urls]
homepage = "https://violet.m-rots.com"
repository = "https://github.com/m-rots/violet"
documentation = "https://api.violet.m-rots.com/vi"

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "vi"
module-root = ""

[dependency-groups]
dev = ["pdoc~=15.0"]

[tool.pyright]
include = ["examples", "vi"]
typeCheckingMode = "strict"

[tool.ruff]
ignore = ["E501"]
select = [
    # Hugging face rules
    "C",
    "E",
    "F",
    "I",
    "W",
    # Pandas rules
    "YTT",
    "B",
    "Q",
    "PLE",
    "PLR",
    "PLW",
    "PIE",
    "PYI",
    "TID",
    "ISC",
    "C4",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
lines-after-imports = 2
combine-as-imports = true
