[project]
name = "violet-simulator"
version = "0.3.0"
description = "A smol simulator framework built on top of PyGame"
requires-python = ">=3.13"
readme = "README.md"
license = "MIT"
dependencies = [
    "pygame~=2.6",
    "polars~=1.2",
]

[[project.authors]]
name = "Storm Timmermans"
email = "stormtimmermans@icloud.com"

[project.urls]
homepage = "https://violet.m-rots.com"
repository = "https://github.com/m-rots/violet"
documentation = "https://api.violet.m-rots.com/vi"

[build-system]
requires = ["uv_build>=0.7.8,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "vi"
module-root = ""

[dependency-groups]
dev = [
    "pdoc~=15.0",
    "pyserde[toml]~=0.24",
]

[tool.pyright]
include = ["examples", "vi"]
typeCheckingMode = "strict"
reportPrivateUsage = "none"

[tool.ruff]
select = ["ALL"]
ignore = [
    "E501",
    "D100",
    "D101",
    "D102",
    "D105",
    "D107",
    "D400",
    "D401",
    "SLF001",
]

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["D100", "D101", "D102", "INP001", "T201"]

[tool.ruff.isort]
lines-after-imports = 2
combine-as-imports = true
